testsuite/poke.pkl/printf-diag-20.pk
/* { dg-do compile } */

printf ("x%f16d", 1UH); /* { dg-error "" } */
